force-app/main/default/objects/Postal_Code__c/fields/BuildingNo__c.field-meta.xml
<CustomField>
    <fullName>BuildingNo__c</fullName>
    <label>BuildingNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>