force-app/main/default/objects/Postal_Code__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Postal Codes</relationshipLabel>
    <relationshipName>Postal_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>